# Veridict

./: .gitignore  PRD.md  README.md  Veridict_PRD.md  pyproject.toml  test_context7_mcp.py
app/: __init__.py  config.py  database.py  main.py
app/api/routes/: analysis.py  documents.py
app/models/: clause.py  document.py
core/: __init__.py  cost_tracker.py
core/agents/: __init__.py  cap_limitation_agent.py  clause_analysis_agent.py  comparison_agent.py  definition_validator_agent.py  obligation_extractor.py  risk_identifier_agent.py
core/agents/prompts/: __init__.py  cap_limitation_prompt.py  clause_analysis_prompt.py  comparison_agent_prompt.py  definition_validator_prompt.py  (+2 more)
core/decomposition/: __init__.py  clause_detector.py  hybrid_detector.py  ingestion.py
core/filtering/: __init__.py  reliability_filter.py
core/voting/: __init__.py
core/workers/: __init__.py  base_worker.py  classifier.py  context_builder.py  worker_registry.py
docs/: CONTEXT7_MCP_SUMMARY.md  CONTEXT7_MCP_TEST_REPORT.md
scripts/: check_db.py  create_sample_pdf.py  test_clause_detection.py  test_hybrid_detection.py  test_ingestion.py  test_worker_framework.py  upload_pdf.py
tests/: analysis_tracker.json  clause_output.json  hybrid_clause_output.json  test_app.py  test_ingestion.py
tests/integration/: __init__.py  test_obligation_extractor_integration.py
tests/unit/: __init__.py  test_cap_limitation_agent.py  test_clause_analysis_agent.py  test_comparison_agent.py  test_definition_validator_agent.py  test_obligation_extractor.py  test_risk_identifier_agent.py
(+8 files in other folders)
